--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "اضافه کردن به لیست پخش",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "اینجا موسیقی‌های لیست پخش را مشاهده می‌کنید.",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "شروع",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
