--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter à la playlist",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Pistes dans la playlist",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Lire maintenant",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
