--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Ampio amin'ny filaharan-kira",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Ireto ny hira avy amin'ity filaharan-kira ity",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Vakio izao",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
