--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Nu afspelen",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
