--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à Playlist",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Reproduzir agora",
   "PLAY_URL": "Reproduzir URL",
   "PLAY_URL_SUBTITLE": "Insira a URL para o recurso de mídia",
