--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
   "PLAYLIST_SINGLE": "Seznam predvajanja",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Predvajaj zdaj",
   "PLAY_URL": "Predvajaj URL",
   "PLAY_URL_SUBTITLE": "Vpiši URI do avdio datoteke",
