--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Spela nu",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
