--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Play now",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
