--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "अभी गाना बजाएं",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
