--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Hozzáadás lejátszási listához",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "A lejátszási lista számai",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Lejátszás most",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
