--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
   "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Проиграть",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
