--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -107,6 +107,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Oynatma listesine ekle",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Listedeki müzikler",
+  "PLAY_INTERNET": "Play from internet",
   "PLAY_NOW": "Şimdi oynat",
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
