--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "\"NAME\" adlı musiqi silinsinmi?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
   "COMING_UP": "Növbəti",
+  "COPY_LINK": "Copy link",
   "CREATE": "Yarat",
   "CREATE_NEW_PLAYLIST": "Yeni oynatma sırası yarat",
   "CREATE_PLAYLIST_SUBHEADER": "Musiqi əlavə etmək üçün bir oynatma sırası yarat",
