--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
   "COMING_UP": "Coming Up",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
