--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "حذف آهنگ \"NAME\"؟",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "حذف کردن",
   "COMING_UP": "بالا آمدن",
+  "COPY_LINK": "Copy link",
   "CREATE": "ساخت",
   "CREATE_NEW_PLAYLIST": "ساختن لیست پخش جدید",
   "CREATE_PLAYLIST_SUBHEADER": "ساخت لیست پخش جدید برای اضافه شدن موزیک‌های شما",
