--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste ?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous certain de vouloir supprimer cette piste ?",
   "COMING_UP": "À venir",
+  "COPY_LINK": "Copy link",
   "CREATE": "Créer",
   "CREATE_NEW_PLAYLIST": "Créer une nouvelle playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Créer une nouvelle playlist pour y ajouter votre musique",
