--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
   "COMING_UP": "अगला आनेवाला",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
