--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
   "COMING_UP": "次の曲",
+  "COPY_LINK": "Copy link",
   "CREATE": "作成",
   "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
   "CREATE_PLAYLIST_SUBHEADER": "新しいプレイリストを作成して音楽を追加します",
