--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COMING_UP": "Hoavy",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
