--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COMING_UP": "В очереди",
+  "COPY_LINK": "Copy link",
   "CREATE": "Создать",
   "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
   "CREATE_PLAYLIST_SUBHEADER": "Создайте новый плейлист, чтобы сортировать музыку",
