--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COMING_UP": "Naslednje",
+  "COPY_LINK": "Copy link",
   "CREATE": "Ustvari",
   "CREATE_NEW_PLAYLIST": "USTVARI NOV SEZNAM PREDVAJANJA",
   "CREATE_PLAYLIST_SUBHEADER": "Ustvari nov seznam predvajanja, da lahko dodaš svojo glasbo",
