--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Radera låten \"NAME\"?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Radera",
   "COMING_UP": "Kommer Härnäst",
+  "COPY_LINK": "Copy link",
   "CREATE": "Skapa",
   "CREATE_NEW_PLAYLIST": "SKAPA NY SPELLISTA",
   "CREATE_PLAYLIST_SUBHEADER": "Skapa ny spellista för att lägga till din musik",
