--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "\"NAME\" isimli müzik silindin mi?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
   "COMING_UP": "Sırada",
+  "COPY_LINK": "Copy link",
   "CREATE": "Oluştur",
   "CREATE_NEW_PLAYLIST": "Yeni oynatma listesi oluştur",
   "CREATE_PLAYLIST_SUBHEADER": "Müzik eklemek için bir oynatma listesi oluştur",
