--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Delete the track \"NAME\"?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Delete",
   "COMING_UP": "Coming Up",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
