--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COMING_UP": "Coming Up",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
