--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
   "COMING_UP": "Volgende",
+  "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
