--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -43,6 +43,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
   "COMING_UP": "Chegando",
+  "COPY_LINK": "Copy link",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova playlist para adicionar sua música",
