--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Musiqilər",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "\"NAME\" adlı musiqi silinsinmi?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Növbəti",
   "COPY_LINK": "Copy link",
   "CREATE": "Yarat",
@@ -123,7 +124,7 @@
   "REINDEX": "Yenilə",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "SİL",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma sırasından sil",
   "REPEAT": "Təkrar et",
   "RESULTS_FOR_QUERY": "\"QUERY\" üçün nəticələr",
