--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "آهنگ",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "حذف آهنگ \"NAME\"؟",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "حذف کردن",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "بالا آمدن",
   "COPY_LINK": "Copy link",
   "CREATE": "ساخت",
@@ -123,7 +124,7 @@
   "REINDEX": "بروزرسانی",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "حذف",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
   "RESULTS_FOR_QUERY": "نتیجه‌های \"QUERY\"",
