--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Pistes de l'album",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste ?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous certain de vouloir supprimer cette piste ?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "À venir",
   "COPY_LINK": "Copy link",
   "CREATE": "Créer",
@@ -123,7 +124,7 @@
   "REINDEX": "Ré-indexer",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "Supprimer",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
