--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "トラック",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "次の曲",
   "COPY_LINK": "Copy link",
   "CREATE": "作成",
@@ -123,7 +124,7 @@
   "REINDEX": "再インデックス",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "削除",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
