--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Mozika ao amini'ilay rakikira",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Hoavy",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "FAFANA",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
