--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Chegando",
   "COPY_LINK": "Copy link",
   "CREATE": "Criar",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindexar",
   "REINDEX_INFORMATION": "Construir a biblioteca de música novamente (mais lento)",
   "REINDEX_SUBTITLE": "Construir a biblioteca de música completa depois de limpar o banco de dados atual.",
-  "REMOVE": "REMOVER",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
