--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Сохранённые треки",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "В очереди",
   "COPY_LINK": "Copy link",
   "CREATE": "Создать",
@@ -123,7 +124,7 @@
   "REINDEX": "Переиндексировать",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "УДАЛИТЬ",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
