--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Naslednje",
   "COPY_LINK": "Copy link",
   "CREATE": "Ustvari",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindeksiraj",
   "REINDEX_INFORMATION": "Ponovno zgradi glasbeno zbirko (počasneje)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "ODSTRANI",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Ponavljaj",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
