--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Låtar",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Radera låten \"NAME\"?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Radera",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Kommer Härnäst",
   "COPY_LINK": "Copy link",
   "CREATE": "Skapa",
@@ -123,7 +124,7 @@
   "REINDEX": "Omindexera",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "TA BORT",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
