--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Müzikler",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "\"NAME\" isimli müzik silindin mi?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Sırada",
   "COPY_LINK": "Copy link",
   "CREATE": "Oluştur",
@@ -123,7 +124,7 @@
   "REINDEX": "Yenile",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "SİL",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
   "REPEAT": "Tekrar",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
