--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "专辑中歌曲",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "当前播放",
   "COPY_LINK": "Copy link",
   "CREATE": "创建",
@@ -123,7 +124,7 @@
   "REINDEX": "重新检索",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "移除",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
