--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "एल्बम के गाने",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "अगला आनेवाला",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "हटाये",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
