--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Számok az albumból",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Coming Up",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "ELTÁVOLÍTÁS",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
