--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -42,6 +42,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Volgende",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
@@ -123,7 +124,7 @@
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "VERWIJDEREN",
+  "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
