--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -2,7 +2,7 @@
   "ABOUT_SUBTITLE": "このアプリについての情報と開発者",
   "ABOUT_TITLE": "このアプリについて",
   "ADD_NEW_FOLDER": "新しいフォルダを追加",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "音楽ライブラリに新しいフォルダを追加する。",
   "ADD_TO_NOW_PLAYING": "再生中に追加",
   "ADD_TO_PLAYLIST": "プレイリストに追加",
   "ALBUM": "アルバム",
@@ -18,7 +18,7 @@
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "音楽に合わせて\"再生中バー\"の色を変える",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "コレクション",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
@@ -42,9 +42,9 @@
   "COLLECTION_TRACKS_SUBHEADER": "トラック",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "\"TRACK_NAME\"を\"PLAYLIST_NAME\"から削除しますか？",
   "COMING_UP": "次の曲",
-  "COPY_LINK": "Copy link",
+  "COPY_LINK": "リンクをコピー",
   "CREATE": "作成",
   "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
   "CREATE_PLAYLIST_SUBHEADER": "新しいプレイリストを作成して音楽を追加します",
@@ -54,7 +54,7 @@
   "DESCENDING": "降順",
   "DISCORD": "Discordサーバー",
   "DISCOVERING_FILES": "ファイルを探しています...",
-  "DONATE": "Donate",
+  "DONATE": "寄付",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
@@ -107,30 +107,30 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
   "PLAYLIST_ADD_DIALOG_TITLE": "プレイリストに追加",
-  "PLAYLIST_SINGLE": "Playlist",
+  "PLAYLIST_SINGLE": "プレイリスト",
   "PLAYLIST_TRACKS_SUBHEADER": "このプレイリストには以下のトラックがあります",
-  "PLAY_INTERNET": "Play from internet",
+  "PLAY_INTERNET": "インターネットから再生",
   "PLAY_NOW": "今すぐ再生",
-  "PLAY_URL": "Play URL",
+  "PLAY_URL": "URLを再生",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "前へ",
-  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
+  "PROXY_SUBTITLE": "外部メディアリソースのためのプロキシを有効にします",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します (高速)",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "再インデックス",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_INFORMATION": "音楽ライブラリを再び構築します (低速)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "Remove",
+  "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
-  "SAVE_AS_PLAYLIST": "Save as playlist",
+  "SAVE_AS_PLAYLIST": "プレイリストとして保存",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
   "SEARCH": "検索",
   "SEARCH_COLLECTION": "コレクションを検索",
@@ -190,8 +190,8 @@
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
   "UNMUTE": "ミュート解除",
-  "UPDATE_AVAILABLE": "Update available: VERSION",
-  "VIDEO_SINGLE": "Video",
+  "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
+  "VIDEO_SINGLE": "ビデオ",
   "WARNING": "注意",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
