--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -1,5 +1,5 @@
 {
-  "ABOUT_SUBTITLE": "このアプリについての情報と開発者",
+  "ABOUT_SUBTITLE": "このアプリと開発者についての情報",
   "ABOUT_TITLE": "このアプリについて",
   "ADD_NEW_FOLDER": "新しいフォルダを追加",
   "ADD_NEW_FOLDER_SUBTITLE": "音楽ライブラリに新しいフォルダを追加する。",
@@ -11,27 +11,27 @@
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
   "ASCENDING": "昇順",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "アルバムの完了後、コレクションから他の曲を自動的に再生中に追加する",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "起動した際に自動的に音楽のインデックスを行う",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "キューの完了後、コレクションから他の曲を自動的に再生する",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "シームレスな再生を有効にする",
+  "AUTO_REFRESH_SETTING": "起動した際に新しいファイルをチェックする",
+  "AUTO_REFRESH_SETTING_TITLE": "起動時に自動的に音楽を探す",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "音楽に合わせて\"再生中バー\"の色を変える",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "動的な再生中バーの着色",
   "COLLECTION": "コレクション",
-  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
-  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "削除しますか？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "アルバム\"NAME\"を削除しますか？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "削除",
   "COLLECTION_INDEXING_HINT": "音楽を追加中...",
   "COLLECTION_INDEXING_LABEL": "端末の音楽を同期中。\nアプリを終了しないでください。",
   "COLLECTION_INFO_SUBHEADER": "アルバムについて",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "アルバムをもっと見る",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "アーティストをもっと見る",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "トラックをもっと見る",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "このプレイリストを削除しますか？",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COLLECTION_SEARCH_LABEL": "コレクションから検索",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "プレイリスト\"NAME\"を削除しますか？",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "削除",
+  "COLLECTION_SEARCH_LABEL": "音楽を検索",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "コレクションからは見つかりませんでした",
   "COLLECTION_SEARCH_NO_RESULTS_TITLE": "見つかりませんでした",
   "COLLECTION_SEARCH_WELCOME": "アルバムとトラック、アーティストを検索...",
@@ -40,8 +40,8 @@
   "COLLECTION_TOP_SUBHEADER_ARTIST": "最新のアーティスト",
   "COLLECTION_TOP_SUBHEADER_TRACK": "最新のトラック",
   "COLLECTION_TRACKS_SUBHEADER": "トラック",
-  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
-  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "トラック\"NAME\"を削除しますか？",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "\"TRACK_NAME\"を\"PLAYLIST_NAME\"から削除しますか？",
   "COMING_UP": "次の曲",
   "COPY_LINK": "リンクをコピー",
@@ -55,32 +55,32 @@
   "DISCORD": "Discordサーバー",
   "DISCOVERING_FILES": "ファイルを探しています...",
   "DONATE": "寄付",
-  "DOWNLOAD_UPDATE": "アップデートをダウンロード",
+  "DOWNLOAD_UPDATE": "アップデート",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
   "EXIT_NOW_PLAYING": "再生中を閉じる",
-  "EXIT_SUBTITLE": "アプリを終了しますか？",
+  "EXIT_SUBTITLE": "Harmonoidを終了しますか？",
   "EXIT_TITLE": "終了",
-  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
   "GO_TO_SETTINGS": "設定に移動する",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
-  "KNOW_MORE": "もっと見る",
+  "KNOW_MORE": "もっと知る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
-  "LESS": "Less",
+  "LESS": "減らす",
   "LISTENING_TO_MUSIC": "音楽を聴く 💜",
   "LYRICS": "歌詞",
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
-  "LYRICS_RETRIEVING": "歌詞を受信中...",
+  "LYRICS_RETRIEVING": "歌詞を取得中...",
   "MENU": "メニュー",
-  "MORE": "More",
+  "MORE": "もっと",
   "MUTE": "ミュート",
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
   "NEXT": "次へ",
   "NO": "いいえ",
-  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
+  "NOTHING_IN_QUEUE": "キューには何も入っていません。",
   "NOTIFICATION_LYRICS_SUBTITLE": "歌詞を通知パネルに表示する",
   "NOTIFICATION_LYRICS_TITLE": "歌詞を通知に表示",
   "NOW_PLAYING": "再生中",
@@ -97,13 +97,13 @@
   "OK": "OK",
   "OPEN_IN_BROWSER": "ブラウザで開く",
   "OPTIONS": "オプション",
-  "ORDER": "Order",
+  "ORDER": "順序",
   "PAUSE": "一時停止",
   "PLAY": "再生",
   "PLAYLIST": "プレイリスト",
   "PLAYLISTS_CREATE": "新しいプレイリストを作成",
   "PLAYLISTS_SUBHEADER": "デバイスで利用できるプレイリスト",
-  "PLAYLISTS_TEXT_FIELD_HINT": "新しいプレイリストの名前",
+  "PLAYLISTS_TEXT_FIELD_HINT": "新しいプレイリストの名前...",
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
   "PLAYLIST_ADD_DIALOG_TITLE": "プレイリストに追加",
@@ -112,18 +112,18 @@
   "PLAY_INTERNET": "インターネットから再生",
   "PLAY_NOW": "今すぐ再生",
   "PLAY_URL": "URLを再生",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
+  "PLAY_URL_SUBTITLE": "メディアリソースのURIを入力します",
   "PREVIOUS": "前へ",
   "PROXY_SUBTITLE": "外部メディアリソースのためのプロキシを有効にします",
-  "PROXY_TITLE": "Proxy",
-  "PROXY_URL": "Proxy URL",
+  "PROXY_TITLE": "プロキシ",
+  "PROXY_URL": "プロキシURL",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します (高速)",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_SUBTITLE": "新しく追加/削除されたファイルで音楽ライブラリを更新するためにチェックします。",
   "REINDEX": "再インデックス",
   "REINDEX_INFORMATION": "音楽ライブラリを再び構築します (低速)",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REINDEX_SUBTITLE": "現在のデータベースをクリア後、完全な音楽ライブラリを構築します。",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
@@ -137,7 +137,7 @@
   "SEARCH_HISTORY_SUBHEADER": "最近の検索",
   "SEARCH_NO_RECENT_SEARCHES": "ここに最近の検索が表示されます",
   "SEARCH_RESULT_LOADER_LABEL": "音楽を取得中...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Harmonoidを検索...",
   "SEE_ALL": "すべて見る",
   "SELECTED_DIRECTORIES": "これらが見つかりました",
   "SELECTED_DIRECTORY": "フォルダを選択:",
@@ -151,11 +151,11 @@
   "SETTING_APP_VERSION_TITLE": "バージョン",
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "インデックス済み",
-  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING 中 TOTAL_STRING トラックをインデックスしました...",
+  "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "TOTAL_STRING 中 NUMBER_STRING トラックをインデックスしました...",
   "SETTING_INDEXING_SUBTITLE": "フォルダをさらにコレクションに追加",
   "SETTING_INDEXING_TITLE": "コレクション",
   "SETTING_INDEXING_WARNING": "中断しないでください",
-  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "サポートいただきありがとうございます。",
+  "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "アプリをサポートいただきありがとうございます。",
   "SETTING_LANGUAGE_PROVIDERS_TITLE": "翻訳者",
   "SETTING_LANGUAGE_RESTART_DIALOG_SUBTITLE": "アプリを再起動しますか？",
   "SETTING_LANGUAGE_RESTART_DIALOG_TITLE": "アプリの再起動が必要です",
@@ -172,10 +172,10 @@
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
   "SHOW_ALBUM": "アルバムを表示",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "再生したら再生中画面にジャンプ",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "再生するトラックを選択したら\"再生中画面\"を表示する",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーインジケーターを有効にする",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "タスクバーのアプリアイコンに曲の再生位置を表示する",
   "SHUFFLE": "シャッフル",
   "SORT": "並び替え",
   "SORT_BY": "並び順",
