--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -25,7 +25,7 @@
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
   "COLLECTION_INDEXING_HINT": "Adicionando sua música...",
   "COLLECTION_INDEXING_LABEL": "Sua música local está sendo sincronizada.\nNão é uma boa ideia fechar o aplicativo.",
-  "COLLECTION_INFO_SUBHEADER": "Alguns insights do álbum",
+  "COLLECTION_INFO_SUBHEADER": "Alguns percepções do álbum",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
@@ -40,11 +40,11 @@
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
   "COLLECTION_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
-  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
-  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
-  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você deseja apagar essa música do dispositivo?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você deseja apagar?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remover \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "Chegando",
-  "COPY_LINK": "Copy link",
+  "COPY_LINK": "Copiar link",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
   "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova playlist para adicionar sua música",
@@ -109,14 +109,14 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à Playlist",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
-  "PLAY_INTERNET": "Play from internet",
+  "PLAY_INTERNET": "Reproduzir da internet",
   "PLAY_NOW": "Reproduzir agora",
   "PLAY_URL": "Reproduzir URL",
   "PLAY_URL_SUBTITLE": "Insira a URL para o recurso de mídia",
   "PREVIOUS": "Anterior",
   "PROXY_SUBTITLE": "Ativar proxy para recursos de mídia externos.",
   "PROXY_TITLE": "Proxy",
-  "PROXY_URL": "Proxy URL",
+  "PROXY_URL": "URL do Proxy",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "Atualizar",
   "REFRESH_INFORMATION": "Apenas verifica os novos arquivos adicionados e excluídos para atualizar a biblioteca de músicas (mais rápido)",
@@ -124,7 +124,7 @@
   "REINDEX": "Reindexar",
   "REINDEX_INFORMATION": "Construir a biblioteca de música novamente (mais lento)",
   "REINDEX_SUBTITLE": "Construir a biblioteca de música completa depois de limpar o banco de dados atual.",
-  "REMOVE": "Remove",
+  "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
