--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -64,7 +64,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
   "KNOW_MORE": "KNOW MORE",
