--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -64,7 +64,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Granska din internetanslutning.",
   "KNOW_MORE": "VET MER",
