id_ID.json update
Previous version has deleted " in line 5, which causes the application to break

--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -1,8 +1,8 @@
 {
-  "ABOUT_SUBTITLE": "Informasi tentang aplikasi & pemgembangnya",
+  "ABOUT_SUBTITLE": "Informasi tentang aplikasi & pengembangnya",
   "ABOUT_TITLE": "Tentang",
   "ADD_NEW_FOLDER": "Tambah folder baru",
-  "ADD_NEW_FOLDER_SUBTITLE": "Tambah folde rbaru ke perpustakaan musik anda.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Tambah folder baru ke perpustakaan musik anda.",
   "ADD_TO_NOW_PLAYING": "Tambahkan ke mainkan sekarang",
   "ADD_TO_PLAYLIST": "Tambahkan ke daftar putar",
   "ALBUM": "Album",
@@ -18,7 +18,7 @@
   "A_TO_Z": "A ke Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "BATAL",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Ganti warna \"Bar mainkan sekarang\" berdasarkan musik",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Ganti warna \"Bar lagu yang sedang dimainkan\" berdasarkan musik",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Koleksi",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Hapus album \"NAME\"?",
@@ -43,8 +43,8 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Hapus trek \"NAME\"?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Hapus",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Hapus \"TRACK_NAME\" dari \"PLAYLIST_NAME\"?",
-  "COMING_UP": "Akan datang",
-  "COPY_LINK": "salin link",
+  "COMING_UP": "Lagu Selanjutnya",
+  "COPY_LINK": "Salin link",
   "CREATE": "Buat",
   "CREATE_NEW_PLAYLIST": "BUAT DAFTAR PUTAR BARU",
   "CREATE_PLAYLIST_SUBHEADER": "daftar putar baru untuk menambahkan musik anda",
@@ -62,7 +62,7 @@
   "EXIT_SUBTITLE": "Apakah anda ingin menutup Harmonoid?",
   "EXIT_TITLE": "Tutup",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditanai sebagai pengaturan stabil.",
+  "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Tunggu",
@@ -112,7 +112,7 @@
   "PLAY_INTERNET": "Mainkan dari internet",
   "PLAY_NOW": "Mainkan sekarang",
   "PLAY_URL": "Buka URL",
-  "PLAY_URL_SUBTITLE": "masukkan URL ke sumber media",
+  "PLAY_URL_SUBTITLE": "Masukkan URL ke sumber media",
   "PREVIOUS": "Sebelumnya",
   "PROXY_SUBTITLE": "Aktifkan proxy untuk sumber media external.",
   "PROXY_TITLE": "Proxy",
@@ -122,7 +122,7 @@
   "REFRESH_INFORMATION": "Hanya cek file musik yang baru ditambahkan dan dihapus untuk memperbarui perpustakaan musik (lebih cepat)",
   "REFRESH_SUBTITLE": "Cek file musik yang baru ditambahkan dan dihapus untuk memperbarui perpustakaan musik.",
   "REINDEX": "Daftarkan ulang",
-  "REINDEX_INFORMATION": "Buat perpustakaan musik lagi(lebih lambat)",
+  "REINDEX_INFORMATION": "Buat perpustakaan musik lagi (lebih lambat)",
   "REINDEX_SUBTITLE": "Buat perpustakaan musik lengkap setelah menghapus database sekarang.",
   "REMOVE": "Hapus",
   "REMOVE_FROM_PLAYLIST": "Hapus dari daftar putar",
@@ -147,7 +147,7 @@
   "SETTING_ACCENT_COLOR_TITLE": "Aksen",
   "SETTING_APP_VERSION_INSTALLED": "Versi yang terinstal",
   "SETTING_APP_VERSION_LATEST": "Versi terbaru",
-  "SETTING_APP_VERSION_SUBTITLE": "Informasi tentang versi app saat ini",
+  "SETTING_APP_VERSION_SUBTITLE": "Informasi tentang versi aplikasi saat ini",
   "SETTING_APP_VERSION_TITLE": "Versi",
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Telah didaftarkan",
@@ -185,7 +185,7 @@
   "THEME_MODE_DARK": "Gelap",
   "THEME_MODE_LIGHT": "Terang",
   "THEME_MODE_SYSTEM": "Sistem",
-  "TRACK": "Treks",
+  "TRACK": "Trek",
   "TRACKS_FROM_ARTIST": "Trek",
   "TRACK_SINGLE": "Trek",
   "TRANSFERS": "Transfer",
