--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Zaraina",
   "SHOW_ALBUM": "Show album",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
