--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Mostrar album",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Pular para a Tela Em Execução ao reproduzir",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Mostrar \"Tela Em Execução\" depois que uma faixa é selecionada para reprodução",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Ativar indicador da barra de tarefas",
