--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Bagikan",
   "SHOW_ALBUM": "Tunjukkan album",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Lompat ke layar lagu yang sedang dimainkan",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Tunjukkan \"Layar lagu yang sedang dimainkan\" setelah sebuah trek dipilih",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Aktifkan indikator taskbar",
