--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
   "SHOW_ALBUM": "アルバムを表示",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "再生したら再生中画面にジャンプ",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "再生するトラックを選択したら\"再生中画面\"を表示する",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーインジケーターを有効にする",
