--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
