--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -172,6 +172,7 @@
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
+  "SHOW_IN_FILE_MANAGER": "Show in file manager",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Avtomatično preskoči na \"Now playing\" zaslon ko se predvaja pesem",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
